sorted/tests/15-pattern-string-literal.stderr
error: `"abc def"` should sort before "def"
 --> tests/15-pattern-string-literal.rs:8:9
  |
8 |         "abc def" => println!("abc def"),
  |         ^^^^^^^^^
